@@ -2,7 +2,7 @@ name = ASU Maps Enhanced
 description = This module allows placement of Campus Bird-overlayed Google maps
 core = 7.x
 package = ASU Webspark
-version = 7.x-1.3
+version = 7.x-1.4
 project = asu_maps_enhanced
 dependencies[] = features
 dependencies[] = fieldable_panels_panes
@@ -19,5 +19,4 @@ features[field_instance][] = fieldable_panels_pane-asu_maps_enhanced-field_map_i
 features[user_permission][] = create fieldable asu_maps_enhanced
 features[user_permission][] = delete fieldable asu_maps_enhanced
 features[user_permission][] = edit fieldable asu_maps_enhanced
-
 stylesheets[all][] = css/asu_maps_enhanced.css
